# OCR_Investigation

./: .gitignore  README.md  ground_truth.json  ground_truth.jsonl  pyproject.toml
reports/: cross_model_comparison.html  deepseek_ocr2_comparison_report.html  deepseek_ocr2_comparison_report.json  document_intelligence_comparison_report.json  glm_ocr_comparison_report.html  glm_ocr_comparison_report.json  paddle_ocr_comparison_report.html  paddle_ocr_comparison_report.json
results/deepseek_ocr2/: 001_clean_standard_jpeg.json  001_clean_standard_pdf.json  001_clean_standard_png.json  002_clean_minimal_jpeg.json  002_clean_minimal_pdf.json  002_clean_minimal_png.json  003_clean_corporate_jpeg.json  003_clean_corporate_pdf.json  003_clean_corporate_png.json  004_clean_modern_jpeg.json  004_clean_modern_pdf.json  004_clean_modern_png.json  005_clean_standard_jpeg.json  005_clean_standard_pdf.json  005_clean_standard_png.json  006_clean_minimal_jpeg.json  006_clean_minimal_pdf.json  006_clean_minimal_png.json  007_clean_corporate_jpeg.json  007_clean_corporate_pdf.json  007_clean_corporate_png.json  008_clean_modern_jpeg.json  008_clean_modern_pdf.json  008_clean_modern_png.json  009_clean_standard_jpeg.json  009_clean_standard_pdf.json  009_clean_standard_png.json  010_clean_minimal_jpeg.json  (+441 more)
scripts/: deepseek_ocr2.ipynb  generate_cross_model_report.py  generate_report.py  glm_ocr.ipynb  nemotron_parse.ipynb  numarkdown_8b_thinking.ipynb  paddle_ocr.ipynb  run_ocr.py  test_single.py
src/: __init__.py  config.py
test_results/: combined_results.json
(+3676 files in other folders)
